# ocamlclean

./: .gitignore  README  dune-project
etc/: Makefile.conf  config.ml
src/: c_util.ml  cleanenvs.ml  code.ml  data.ml  dune  globalise.ml  instr.ml  linker.ml  loader.ml  main.ml  step1.ml
test/: dune  main.ml  run.t  runtime_unclean.c  start.c
